Prevent new composer from overflowing from non-breakable text (#8829)

--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -37,6 +37,7 @@ limitations under the License.
     }
 
     .mx_MessageComposer_row {
+        min-width: 0;
         grid-area: composer;
     }
 
